<resources>
    <string name="app_name">@string/APP_LABEL</string>
    <string name="about_us">About Us</string>
    <string name="about_us_under_construction">About Us Under Construction</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_id">Account Id</string>
    <string name="account_not_active_to_perform_deposit">Account should to be Active to perform a deposit</string>
    <string name="account_not_active_to_perform_transfer">Account should to be Active to perform a transfer</string>
    <string name="account_number">Account Number</string>
    <string name="account_short">A/C</string>
    <string name="account_status">Account Status</string>
    <string name="account_type">Account Type</string>
    <string name="account_type_loan">accountType.loan</string>
    <string name="accounts">Accounts</string>
    <string name="accounts_overview">Account Overview</string>
    <string name="activation_date">Activation Date</string>
    <string name="active">Active</string>
    <string name="active_uc">ACTIVE</string>
    <string name="add">Add</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="add_beneficiary_option">Add Third Party Beneficiaries to your account.\10Either enter manually or scan account QR code</string>
    <string name="add_guarantor">Add Guarantor</string>
    <string name="add_widget">Add widget</string>
    <string name="all">All</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="amortization">Amortization</string>
    <string name="amount">Amount</string>
    <string name="amount_due">Due:</string>
    <string name="amount_greater_than_zero">Amount should be greater than zero</string>
    <string name="amount_outstanding">Outstanding:</string>
    <string name="amount_paid">Paid:</string>
    <string name="amount_waived">Waved:</string>
    <string name="annual_interest_rate">Ann. Interest Rate</string>
    <string name="app_version">Version %1$s</string>
    <string name="apply">Apply</string>
    <string name="apply_for_loan">Apply for Loan</string>
    <string name="apply_savings_account">Apply Savings Account</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="approved">Approved</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="authentication_token">Authentication Token</string>
    <string name="balance">Balance</string>
    <string name="base_url">Base URL</string>
    <string name="basic">Basic</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="beneficiary_created_successfully">Beneficiary created successfully</string>
    <string name="beneficiary_deleted_successfully">Beneficiary deleted successfully</string>
    <string name="beneficiary_detail">Beneficiary Detail</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="beneficiary_updated_successfully">Beneficiary updated successfully</string>
    <string name="btn_backspace">Back</string>
    <string name="btn_clear">Clear</string>
    <string name="call_now">Call now</string>
    <string name="callul">http://ois.com/</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_transfer">Are you sure you want to cancel the transfer?</string>
    <string name="change_account_password">Change your Account Password</string>
    <string name="change_app_passcode">Change App Passcode</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="change_password">Change Password</string>
    <string name="charges">Charges</string>
    <string name="chip_text">Chip text</string>
    <string name="choose">Choose application</string>
    <string name="choose_account_type">Select Account Type from the dropdown</string>
    <string name="choose_language">Choose your language</string>
    <string name="choose_option">Choose option</string>
    <string name="choose_transfer_type">Choose Transfer Type</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="client_accounts">Client Accounts</string>
    <string name="client_charges">Client Charges</string>
    <string name="client_classification">Client Classification</string>
    <string name="client_name">Client Name</string>
    <string name="client_type">Client Type</string>
    <string name="clients">Clients</string>
    <string name="clients_list">Chose a client</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="closed">Closed</string>
    <string name="closed_because_of_obligation">Closed because of some Obligations</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_email">support@mifos.org</string>
    <string name="continue_str">Continue</string>
    <string name="copy_right_mifos">©2016-%1$s Mifos Initiative.</string>
    <string name="create_an_account">Create an account</string>
    <string name="currency">Currency</string>
    <string name="current_password">Current Password</string>
    <string name="date">Date</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_web_client_id">145094142099-gkpe5vi3alknemgk46ljq9jhh9791aft.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="delete_beneficiary">Delete Beneficiary</string>
    <string name="delete_beneficiary_confirmation">Are you sure you want to delete this Beneficiary</string>
    <string name="delete_guarantor">Delete Guarantor</string>
    <string name="deposit">Deposit</string>
    <string name="details">Details</string>
    <string name="developer">Developer</string>
    <string name="dialog_action_app_settings">App Settings</string>
    <string name="dialog_action_back">Back</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_i_am_sure">I\'M Sure</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_re_try">Retry</string>
    <string name="dialog_are_you_sure_that_you_want_to_string">Are you sure that you want to %1$s?</string>
    <string name="dialog_cancel_registration_message">Do you want to cancel registering New Account ?</string>
    <string name="dialog_cancel_registration_title">Cancel Registration</string>
    <string name="dialog_logout">Are you sure you want to logout?</string>
    <string name="dialog_message_camera_permission_denied_prompt">Without camera permission you will not be able to scan QR code to add beneficiary.Are you sure you want to deny this permission?</string>
    <string name="dialog_message_camera_permission_never_ask_again">You have denied permission to use camera, without this permission you will not be able to add beneficiaries using QR Code. Please enable it in settings</string>
    <string name="dialog_message_phone_state_permission_denied_prompt">This permission is required to show currency according to your country.Are you sure you want to deny it?</string>
    <string name="dialog_message_phone_state_permission_never_ask_again">You have denied permission to fetch Phone State, without this permission currency might not be shown in proper format. Please enable it in settings</string>
    <string name="dialog_message_read_storage_permission_never_ask_again">You have denied permission to read storage, without this permission you will not be able to add beneficiaries using QR Code. Please enable it in settings</string>
    <string name="dialog_message_storage_permission_denied_prompt">Without storage permission you will not be able to upload QR code to add beneficiary.Are you sure you want to deny this permission?</string>
    <string name="dialog_message_write_storage_permission_never_ask_again">You have denied permission to write to storage, without this permission you will not be able to add beneficiaries using QR Code. Please enable it in settings</string>
    <string name="dialog_permission_denied">Permission Denied</string>
    <string name="disbursement">Disbursement</string>
    <string name="disbursement_date">Disbursement Date</string>
    <string name="dividend_payout">Dividend Payout</string>
    <string name="double_amount">%1$.2f</string>
    <string name="double_and_string">%1$.2f %2$s</string>
    <string name="due_date">Due Date</string>
    <string name="due_date_in_charges">Due Date:</string>
    <string name="dummy_principal_amount">143.00</string>
    <string name="edit">Edit</string>
    <string name="eight">8</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifications</string>
    <string name="confirm">Confirmation</string>
    <string name="api_key">Api key</string>
    <string name="c_pass">Change Pasword</string>
    <string name="c_pin">Change Pin</string>
    <string name="compain">Complain</string>
    <string name="desc">Description</string>
    <string name="device_lock">Device lock</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="helpline">Helpline</string>
    <string name="history">History</string>
    <string name="lang">Language</string>
    <string name="live_rc">Live recharge</string>
    <string name="membership">Membership</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="mobile">Mobile</string>
    <string name="my_device">My Device</string>
    <string name="name">Name</string>
    <string name="others">Others</string>
    <string name="policy">Privacy Policy</string>
    <string name="refer">Refer</string>
    <string name="shop_h">My shop History</string>
    <string name="two_step">Two Step</string>
    <string name="profile">Profile</string>
</resources>